turning on dd for nci-crdc

--- a/nci-crdc.datacommons.io/manifest.json
+++ b/nci-crdc.datacommons.io/manifest.json
@@ -137,7 +137,7 @@
     "sync_from_dbgap": "True",
     "useryaml_s3path": "s3://cdis-gen3-users/ncicrdc/user.yaml",
     "dispatcher_job_num": "10",
-    "dd_enabled": null
+    "dd_enabled": true
   },
   "canary": {
     "default": 0
