--- a/brhstaging.data-commons.org/manifest.json
+++ b/brhstaging.data-commons.org/manifest.json
@@ -19,7 +19,7 @@
     "metadata": "quay.io/cdis/metadata-service:2022.08.1",
     "peregrine": "quay.io/cdis/peregrine:2022.06",
     "pidgin": "quay.io/cdis/pidgin:2022.06",
-    "portal": "quay.io/cdis/data-portal:2022.08.1",
+    "portal": "quay.io/cdis/data-portal:BRH-1.0.0",
     "revproxy": "quay.io/cdis/nginx:2022.06",
     "sheepdog": "quay.io/cdis/sheepdog:2022.06",
     "wts": "quay.io/cdis/workspace-token-service:0.4.0"
