--- a/brhstaging.data-commons.org/manifest.json
+++ b/brhstaging.data-commons.org/manifest.json
@@ -16,7 +16,7 @@
     "hatchery": "quay.io/cdis/hatchery:1.0.0",
     "indexd": "quay.io/cdis/indexd:2022.06",
     "manifestservice": "quay.io/cdis/manifestservice:2022.06",
-    "metadata": "quay.io/cdis/metadata-service:2022.08.1",
+    "metadata": "quay.io/cdis/metadata-service:BRH-1.0.0",
     "peregrine": "quay.io/cdis/peregrine:2022.06",
     "pidgin": "quay.io/cdis/pidgin:2022.06",
     "portal": "quay.io/cdis/data-portal:BRH-1.0.0",
