--- a/brh.data-commons.org/manifest.json
+++ b/brh.data-commons.org/manifest.json
@@ -16,13 +16,13 @@
     "hatchery": "quay.io/cdis/hatchery:1.0.0",
     "indexd": "quay.io/cdis/indexd:2022.06",
     "manifestservice": "quay.io/cdis/manifestservice:2022.06",
-    "metadata": "quay.io/cdis/metadata-service:2022.06",
+    "metadata": "quay.io/cdis/metadata-service:BRH-1.0.0",
     "peregrine": "quay.io/cdis/peregrine:2022.06",
     "pidgin": "quay.io/cdis/pidgin:2022.06",
-    "portal": "quay.io/cdis/data-portal:3.27.1",
+    "portal": "quay.io/cdis/data-portal:BRH-1.0.0",
     "revproxy": "quay.io/cdis/nginx:2022.06",
     "sheepdog": "quay.io/cdis/sheepdog:2022.06",
-    "wts": "quay.io/cdis/workspace-token-service:2022.06"
+    "wts": "quay.io/cdis/workspace-token-service:0.4.0"
   },
   "arborist": {
     "deployment_version": "2"
@@ -49,7 +49,7 @@
   },
   "metadata": {
     "USE_AGG_MDS": true,
-    "AGG_MDS_NAMESPACE": "brh"
+    "AGG_MDS_NAMESPACE": "brhprod"
   },
   "portal": {
     "GEN3_BUNDLE": "ecosystem"
