added loinc properties to midrc staging ETL

--- a/staging.midrc.org/etlMapping.yaml
+++ b/staging.midrc.org/etlMapping.yaml
@@ -121,6 +121,11 @@ mappings:
       - name: days_from_study_to_neg_covid_test
       - name: days_from_study_to_pos_covid_test
       - name: days_to_study
+      - name: loinc_code
+      - name: loinc_contrast
+      - name: loinc_long_common_name
+      - name: loinc_method
+      - name: loinc_system
       - name: study_description
       - name: study_location
       - name: study_modality
