--- a/staging.midrc.org/etlMapping.yaml
+++ b/staging.midrc.org/etlMapping.yaml
@@ -108,6 +108,18 @@ mappings:
           - name: data_category
             src: data_category
             fn: set
+  - name: midrcstaging_measurement
+    doc_type: measurement
+    type: aggregator
+    root: measurement
+    props:
+      - name: project_id
+      - name: submitter_id
+      - name: case_ids
+      - name: test_days_from_index
+      - name: test_method
+      - name: test_name
+      - name: test_result_text
   - name: midrcstaging_imaging_study
     doc_type: imaging_study
     type: aggregator
