adding measurement guppy index

--- a/staging.midrc.org/manifest.json
+++ b/staging.midrc.org/manifest.json
@@ -139,6 +139,10 @@
         "type": "case"
       },
       {
+        "index": "midrcstaging_measurement",
+        "type": "measurement"
+      },
+      {
         "index": "midrcstaging_imaging_data_file",
         "type": "imaging_data_file"
       },
