--- a/jcoin.datacommons.io/manifest.json
+++ b/jcoin.datacommons.io/manifest.json
@@ -182,6 +182,11 @@
       {
         "index": "jcoin_saes",
         "type": "serious_adverse_event"
+
+      },
+      {
+        "index": "jcoin_etl_time_points",
+        "type": "time_point"
       }
     ],
     "config_index": "jcoin_array-config",
