Test fix https://github.com/uc-cdis/docker-nginx/pull/11

--- a/nightly.planx-pla.net/manifest.json
+++ b/nightly.planx-pla.net/manifest.json
@@ -17,7 +17,7 @@
     "ws-storage": "quay.io/cdis/ws-storage:master",
     "peregrine": "quay.io/cdis/peregrine:master",
     "pidgin": "quay.io/cdis/pidgin:master",
-    "revproxy": "quay.io/cdis/nginx:master",
+    "revproxy": "quay.io/cdis/nginx:m0nhawk-patch-1",
     "sheepdog": "quay.io/cdis/sheepdog:master",
     "portal": "quay.io/cdis/data-portal:master",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
