--- a/gen3.datacommons.io/manifest.json
+++ b/gen3.datacommons.io/manifest.json
@@ -16,6 +16,7 @@
     "revproxy": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/nginx:2022.08",
     "sheepdog": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/sheepdog:2022.08",
     "portal": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/data-portal:2022.08",
+    "frontend-framework": "quay.io/cdis/frontend-framework:feat_n3c_new_metadata",
     "metadata": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/metadata-service:2022.08",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "spark": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/gen3-spark:2022.08",
@@ -306,6 +307,7 @@
     "revproxy_arn": "arn:aws:acm:us-east-1:345060017512:certificate/1ec179ec-043e-4dd3-ae40-e3e530242252",
     "dictionary_url": "http://s3.amazonaws.com/dictionary-artifacts/openaccess_dictionary/0.3.0/schema.json",
     "portal_app": "gitops",
+    "frontend_root": "portal",
     "kube_bucket": "kube-oadc-gen3",
     "logs_bucket": "logs-oadc-gen3",
     "sync_from_dbgap": "False",
