--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -12,7 +12,6 @@ flu.diseasedatahub.org @trevars @uc-cdis/planx-qa
 diseasedatahub.org @trevars @uc-cdis/planx-qa
 dcf-interop.kidsfirstdrc.org @trevars @uc-cdis/planx-qa
 
-
 tbi.datacommons.io @trevars @jingh8 @uc-cdis/planx-qa
 gen3-neuro.datacommons.io @trevars @jingh8 @uc-cdis/planx-qa
 
@@ -20,10 +19,10 @@ va-testing.datacommons.io @nmetokishlubsky @uc-cdis/planx-qa
 va.data-commons.org @nmetokishlubsky @uc-cdis/planx-qa
 vpodc.data-commons.org @nmetokishlubsky @uc-cdis/planx-qa
 
-data.midrc.org @trevars @cgmeyer @uc-cdis/planx-qa
-staging.midrc.org @trevars @cgmeyer @uc-cdis/planx-qa
-validate.midrc.org @trevars @cgmeyer @uc-cdis/planx-qa
-validatestaging.midrc.org @trevars @cgmeyer @uc-cdis/planx-qa
+data.midrc.org @frankliuao @cgmeyer @uc-cdis/planx-qa
+staging.midrc.org @frankliuao @cgmeyer @uc-cdis/planx-qa
+validate.midrc.org @frankliuao @cgmeyer @uc-cdis/planx-qa
+validatestaging.midrc.org @frankliuao @cgmeyer @uc-cdis/planx-qa
 
 gen3.theanvil.io @radhrreddy @uc-cdis/planx-qa
 staging.theanvil.io @radhrreddy @uc-cdis/planx-qa
