--- a/data.midrc.org/etlMapping.yaml
+++ b/data.midrc.org/etlMapping.yaml
@@ -108,6 +108,18 @@ mappings:
           - name: data_category
             src: data_category
             fn: set
+  - name: midrc_measurement
+    doc_type: measurement
+    type: aggregator
+    root: measurement
+    props:
+      - name: project_id
+      - name: submitter_id
+      - name: case_ids
+      - name: test_days_from_index
+      - name: test_method
+      - name: test_name
+      - name: test_result_text
   - name: midrc_imaging_study
     doc_type: imaging_study
     type: aggregator
@@ -121,6 +133,11 @@ mappings:
       - name: days_from_study_to_neg_covid_test
       - name: days_from_study_to_pos_covid_test
       - name: days_to_study
+      - name: loinc_code
+      - name: loinc_contrast
+      - name: loinc_long_common_name
+      - name: loinc_method
+      - name: loinc_system
       - name: study_description
       - name: study_location
       - name: study_modality
@@ -222,9 +239,6 @@ mappings:
           - name: race
             src: race
             fn: set
-          - name: ethnicity
-            src: ethnicity
-            fn: set
           - name: sex
             src: sex
             fn: set
@@ -250,9 +264,6 @@ mappings:
             fn: set
           - name: days_to_study
             src: days_to_study
-            fn: set
-          - name: midrc_harmonized_study_description
-            src: midrc_harmonized_study_description
             fn: set
           - name: study_description
             src: study_description
