--- a/brh.data-commons.org/metadata/aggregate_config.json
+++ b/brh.data-commons.org/metadata/aggregate_config.json
@@ -140,7 +140,7 @@
 		},
 		"JCOIN": {
 			"mds_url": "https://jcoin.datacommons.io/",
-			"commons_url" : "jcoin.datacommons.io/",
+			"commons_url" : "jcoin.datacommons.io",
 			"adapter": "gen3",
 			"keep_original_fields": false,
 			"field_mappings" : {
