--- a/nci-crdc.datacommons.io/manifests/fence/fence-config-public.yaml
+++ b/nci-crdc.datacommons.io/manifests/fence/fence-config-public.yaml
@@ -128,6 +128,9 @@ S3_BUCKETS:
   gdc-organoid-pancreatic-phs001611-2-open:
     cred: 'fence_bot'
     region: 'us-east-1'
+  gdc-tcga-phs000178-open:
+    cred: 'fence_bot'
+    region: 'us-east-1'
   gdc-varepop-apollo-phs001374-2-open:
     cred: 'fence_bot'
     region: 'us-east-1'
