--- a/preprod.gen3.biodatacatalyst.nhlbi.nih.gov/manifests/fence/fence-config-public.yaml
+++ b/preprod.gen3.biodatacatalyst.nhlbi.nih.gov/manifests/fence/fence-config-public.yaml
@@ -645,3 +645,6 @@ S3_BUCKETS:
   nih-nhlbi-topmed-released-phs001599-c1:
     cred: fence-bot
     region: us-east-1
+  nih-nhlbi-pcgc-phs000571-c1:
+    cred: fence-bot
+    region: us-east-1
