--- a/preprod.gen3.biodatacatalyst.nhlbi.nih.gov/etlMapping.yaml
+++ b/preprod.gen3.biodatacatalyst.nhlbi.nih.gov/etlMapping.yaml
@@ -122,8 +122,7 @@ mappings:
             src: data_type
             fn: set
           - name: file_count
-            src: file_id
-            alternate_src: _file_id
+            src: _file_id
             fn: count
   - name: internalstaging_file
     doc_type: file
