--- a/caninedc.org/manifest.json
+++ b/caninedc.org/manifest.json
@@ -114,7 +114,7 @@
     "useryaml_s3path": "s3://cdis-gen3-users/canine/user.yaml",
     "GEN3_DEBUG": "False",
     "dispatcher_job_num": "10",
-    "netpolicy": "on"
+    "netpolicy": "on",
     "dd_enabled": true
   },
   "canary": {
