apply version 2022.10 to dcf-interop.kidsfirstdrc.org

--- a/dcf-interop.kidsfirstdrc.org/manifest.json
+++ b/dcf-interop.kidsfirstdrc.org/manifest.json
@@ -7,22 +7,22 @@
     "autodeploy": "yes"
   },
   "versions": {
-    "arborist": "quay.io/cdis/arborist:1.2.1",
+    "arborist": "quay.io/cdis/arborist:2022.10",
     "arranger": "quay.io/cdis/arranger:1.0.3",
     "arranger-dashboard": "quay.io/cdis/arranger-dashboard:master",
     "arranger-adminapi": "quay.io/cdis/arranger-server:master",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "fence": "quay.io/cdis/fence:2.7.1",
-    "indexd": "quay.io/cdis/indexd:1.1.1",
-    "peregrine": "quay.io/cdis/peregrine:1.0.9",
-    "pidgin": "quay.io/cdis/pidgin:1.0.0",
-    "revproxy": "quay.io/cdis/nginx:1.15.5-ctds",
-    "sheepdog": "quay.io/cdis/sheepdog:1.1.8",
-    "portal": "quay.io/cdis/data-portal:2.7.4",
+    "fence": "quay.io/cdis/fence:2022.10",
+    "indexd": "quay.io/cdis/indexd:2022.10",
+    "peregrine": "quay.io/cdis/peregrine:2022.10",
+    "pidgin": "quay.io/cdis/pidgin:2022.10",
+    "revproxy": "quay.io/cdis/nginx:2022.10",
+    "sheepdog": "quay.io/cdis/sheepdog:2022.10",
+    "portal": "quay.io/cdis/data-portal:2022.10",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
-    "spark": "quay.io/cdis/gen3-spark:1.0.0",
-    "tube": "quay.io/cdis/tube:0.3.15"
+    "spark": "quay.io/cdis/gen3-spark:2022.10",
+    "tube": "quay.io/cdis/tube:2022.10"
   },
   "jupyterhub": {
     "enabled": "yes"
