--- a/icgc.bionimbus.org/etlMapping.yaml
+++ b/icgc.bionimbus.org/etlMapping.yaml
@@ -27,7 +27,7 @@ mappings:
         fn: count
     joining_props:
       - index: file
-        join_on: subject_id
+        join_on: _subject_id
         props:
           - name: data_format
             src: data_format
@@ -65,6 +65,6 @@ mappings:
     injecting_props:
       subject:
         props:
-          - name: subject_id
+          - name: _subject_id
             src: id
           - name: project_id
