Add bucket phs002371 to fence bot

--- a/nci-crdc.datacommons.io/manifests/fence/fence-config-public.yaml
+++ b/nci-crdc.datacommons.io/manifests/fence/fence-config-public.yaml
@@ -57,6 +57,8 @@ S3_BUCKETS:
     cred: 'fence_bot'
   cds-237-phs001819:
     cred: 'fence_bot'
+  cds-243-phs002371:
+    cred: 'fence_bot'
   gdc-target-phs000218-2-open:
     cred: 'fence_bot'
   gdc-beataml1-cohort-phs001657-2-open:
