--- a/healdata.org/manifest.json
+++ b/healdata.org/manifest.json
@@ -1,6 +1,6 @@
 {
   "notes": [
-    "This is the prod environment manifest",
+    "This is the prod environment manifest.",
     "That's all I have to say"
   ],
   "jenkins": {
