--- a/externaldata.healdata.org/manifest.json
+++ b/externaldata.healdata.org/manifest.json
@@ -1,6 +1,6 @@
 {
   "notes": [
-    "This is the prod environment manifest.",
+    "This is the prod environment manifest",
     "This environment will not have a portal, just a s3 bucket with G3FS"
   ],
   "jenkins": {
