--- a/nci-crdc.datacommons.io/manifests/datarefresh/GDC_project_map.json
+++ b/nci-crdc.datacommons.io/manifests/datarefresh/GDC_project_map.json
@@ -399,4 +399,12 @@
         "aws_bucket_prefix": "gdc-mp2prt-wt-phs001965",
         "gs_bucket_prefix": "gdc-mp2prt-wt-phs001965"
     },
+    "CDDP_EAGLE-1": {
+        "aws_bucket_prefix": "gdc-cddp-eagle-1-phs001239",
+        "gs_bucket_prefix": "gdc-cddp-eagle-1-phs001239"
+    },
+    "MATCH-Z1D": {
+        "aws_bucket_prefix": "gdc-match-z1d-phs001859",
+        "gs_bucket_prefix": "gdc-match-z1d-phs001859"
+    },
 }
