updated namings in manifest

--- a/validatestaging.midrc.org/manifest.json
+++ b/validatestaging.midrc.org/manifest.json
@@ -129,19 +129,19 @@
   "guppy": {
     "indices": [
       {
-        "index": "validate_dataset",
+        "index": "validatestaging_dataset",
         "type": "dataset"
       },
       {
-        "index": "validate_case",
+        "index": "validatestaging_case",
         "type": "case"
       },
       {
-        "index": "validate_imaging_data_file",
+        "index": "validatestaging_imaging_data_file",
         "type": "imaging_data_file"
       },
       {
-        "index": "validate_imaging_study",
+        "index": "validatestaging_imaging_study",
         "type": "imaging_study"
       }
     ],
